--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "@react-navigation/native": "~5.1.5",
     "@react-navigation/stack": "~5.2.10",
     "expo": "~39.0.2",
+    "expo-image-picker": "~9.1.0",
+    "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
+    "firebase": "~7.9.0",
+    "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-easy-toast": "~1.2.0",
+    "react-native-elements": "~1.2.7",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-keyboard-aware-scroll-view": "~0.9.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
