--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "~5.2.10",
     "expo": "~39.0.2",
     "expo-image-picker": "~9.1.0",
+    "expo-location": "~8.1.0",
     "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
     "firebase": "~7.9.0",
@@ -25,6 +26,7 @@
     "react-native-elements": "~1.2.7",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-keyboard-aware-scroll-view": "~0.9.1",
+    "react-native-maps": "~0.27.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
